# BurtOS-2

./: .gitignore  CMakeLists.txt  README.md
autonomy/: README.md  drive_control.proto  marker_detection.py
autonomy/test_output/: halt.protobuf  spin.protobuf
cfg/: subsystem_config.json  video_config.json
src/autonomy/: follow_the_gap.py
src/basestation/: CMakeLists.txt  basestation.cpp  basestation.hpp  basestation_screen.cpp  basestation_screen.hpp  lua_modules.cpp  lua_modules.hpp  main.cpp  session.cpp  session.hpp  stacked_widget.cpp  stacked_widget.hpp  window_module.cpp  window_module.hpp
src/basestation/controls/: README.md  controller.cpp  controller.hpp  controller_manager.cpp  controller_manager.hpp  drive_input.cpp  drive_input.hpp  lua_ctrl_lib.cpp  lua_ctrl_lib.hpp
src/basestation/modules/: console.cpp  console.hpp  controller_binding_popup.cpp  controller_binding_popup.hpp  controller_calibration_popup.cpp  controller_calibration_popup.hpp  controller_config.cpp  controller_config.hpp  controller_config_popup.cpp  controller_config_popup.hpp  drive_info.hpp  drive_stats.cpp  drive_stats.hpp  electrical_info.cpp  electrical_info.hpp  map.cpp  map.hpp  module.cpp  module.hpp  network_config.cpp  network_config.hpp  network_settings.cpp  network_settings.hpp  statusbar.cpp  statusbar.hpp  video_feed_viewer.cpp  video_feed_viewer.hpp  window.cpp  window.hpp
src/basestation/modules/input_config/: controller_binding_popup.hpp  controller_calibration_popup.cpp  controller_calibration_popup.hpp  controller_config.cpp  controller_config.hpp
src/basestation/modules/video_decoder/: decoder.cpp  decoder.hpp
src/basestation/subsystem_computer/: drive  drive_controller.cpp  drive_controller.hpp
src/basestation/video_decoder/: decoder.cpp  decoder.hpp
src/basestation/widgets/: action_textbox.hpp  functionbox.cpp  functionbox.hpp  map_panel.cpp  map_panel.hpp  textarea.cpp  textarea.hpp  toolbar.cpp  toolbar.hpp  tray.cpp  tray.hpp  window.cpp  window.hpp
src/basestation/widgets/layouts/: grid_layout.cpp  grid_layout.hpp  simple_column.cpp  simple_column.hpp  simple_row.cpp  simple_row.hpp
src/events/: CMakeLists.txt  events.hpp
src/network/: CMakeLists.txt  README.md  extras.proto  hello.proto  messages.cpp  messages.hpp  network.cpp  network.hpp  network_test.cpp  network_util.hpp  protobuf_test.cpp  stream.cpp  stream.hpp
src/network/MessageTypes/: arm_msg.hpp  camera_control_msg.hpp  camera_msg.hpp  drive_msg.hpp  log_msg.hpp  status_msg.hpp
src/network/apps/: CMakeLists.txt  network_test.cpp  rtt.cpp
src/network/apps/chat/: CMakeLists.txt  chat.cpp  chat_messages.proto
src/network/apps/rtt/: CMakeLists.txt  rtt.cpp  rtt_messages.proto
src/network/rover_service_discovery/: CMakeLists.txt  README.md  rover_service_discovery.cpp  rover_service_discovery.hpp  rsdp_functions.proto
src/network/rover_system_messages/: CMakeLists.txt  control_control.proto  drive_control.proto  rover_system_messages.hpp  sensor_control.proto  video_control.proto
src/rover_control/: CMakeLists.txt  rover_control.cpp  rover_control.hpp
src/roverlua/: CMakeLists.txt  interactive_lua.cpp  interactive_lua.hpp  rover_lua.cpp  rover_lua.hpp
src/scripts/: pi_extract.bash  send_pi1.bash  send_pi2.bash
src/subsystem/: CMakeLists.txt  drive_controller.cpp  drive_controller.hpp  subsystem.cpp
src/subsystem/can/: CMakeLists.txt  can_controller.hpp  commands.cpp  commands.hpp  constants.hpp  rover_can.hpp
src/subsystem/task_scheduler/: CMakeLists.txt  README.md  task_scheduler.cpp  task_scheduler.hpp
src/video/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  session.cpp  session.hpp
src/video/roversystem_utils/: CMakeLists.txt  README.md  logger.cpp  simpleconfig.cpp
