add_library(rover_control rover_control.cpp rover_control.hpp)

target_include_directories(rover_control PUBLIC network rover_system_messages ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(rover_control PUBLIC network rover_system_messages events)

target_compile_features(rover_control PRIVATE cxx_std_17)
